# reconstruct4D

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  MEMFLOW_INTEGRATION.md  README.md  environment.yml  index.html  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-reconstruct4d.sh
data/: class_prob.json  classes.json
doc/: flowchart.mmd  flowchart_foebased_movingobjectdetection.md  flowchart_whole.md
reconstruct4D/: compute_flow.py  compute_foe.py  extract_moving_objects.py  focus_of_expansion.py  oneformersegmentator.py  opticalflow.py  run_oneformer.py  segmentator.py
script/: environment.yml  evaluate_foels_on_DAVIS2016.sh  evaluate_foels_on_davis.sh  evaluate_foels_on_fbms.sh  foels_param.yaml  foels_param_unimatch.yaml  pyproject.toml  run_and_eval_foels.sh  run_and_eval_foels_on_DAVIS2016.sh  run_and_eval_foels_on_FBMS.sh  run_demo.sh  run_foels.sh  run_foels_on_davis4eval.sh
