[tool.poetry]
name = "reconstruct4d"
version = "0.1.0"
description = "This is a python packages for 4D reconstruction project"
authors = ["Masahiro Ogawa <masahiro.ogaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
absl-py==1.4.0
actionlib==1.14.0
aiohttp==3.8.5
aiosignal==1.3.1
angles==1.9.13
anyio==3.7.0
argon2-cffi==21.3.0
argon2-cffi-bindings==21.2.0
asttokens==2.2.1
async-lru==2.0.4
async-timeout==4.0.2
attrs==23.1.0
Babel==2.12.1
backcall==0.2.0
backports.functools-lru-cache==1.6.4
beautifulsoup4==4.12.2
bleach==6.0.0
blinker==1.6.2
bondpy==1.8.6
brotlipy==0.7.0
cachetools==5.3.0
camera-calibration==1.17.0
camera-calibration-parsers==1.12.0
catkin==0.8.10
certifi==2023.11.17
cffi==1.15.1
charset-normalizer==2.1.1
click==8.1.3
comm==0.1.3
contourpy==1.0.5
controller-manager==0.20.0
controller-manager-msgs==0.20.0
cryptography==41.0.3
cv-bridge==1.16.2
cycler==0.11.0
debugpy==1.6.7
decorator==5.1.1
defusedxml==0.7.1
diagnostic-analysis==1.11.0
diagnostic-common-diagnostics==1.11.0
diagnostic-updater==1.11.0
dynamic-reconfigure==1.7.3
entrypoints==0.4
exceptiongroup==1.1.1
executing==1.2.0
fastjsonschema==2.17.1
filelock==3.12.0
flit_core==3.9.0
fonttools==4.25.0
frozenlist==1.3.3
gazebo_plugins==2.9.2
gazebo_ros==2.9.2
gencpp==0.7.0
geneus==3.0.0
genlisp==0.4.18
genmsg==0.6.0
gennodejs==2.0.2
genpy==0.6.15
gmpy2==2.1.2
google-auth==2.22.0
google-auth-oauthlib==1.0.0
grpcio==1.48.2
idna==3.4
image-geometry==1.16.2
imageio==2.31.1
importlib-metadata==6.6.0
importlib-resources==5.12.0
interactive-markers==1.12.0
ipykernel==6.25.0
ipython==8.15.0
jedi==0.18.2
Jinja2==3.1.2
joint-state-publisher==1.15.1
joint-state-publisher-gui==1.15.1
json5==0.9.6
jsonschema==4.17.3
jupyter_client==8.2.0
jupyter_core==5.3.0
jupyter-events==0.6.3
jupyter-lsp==2.2.0
jupyter_server==2.6.0
jupyter_server_terminals==0.4.4
jupyterlab==4.0.1
jupyterlab-pygments==0.2.2
jupyterlab_server==2.22.1
kiwisolver==1.4.4
laser_geometry==1.6.7
Markdown==3.4.3
MarkupSafe==2.1.1
matplotlib==3.7.2
matplotlib-inline==0.1.6
message-filters==1.16.0
mistune==2.0.5
mkl-service==2.4.0
mpmath==1.3.0
multidict==6.0.2
munkres==1.1.4
nbclient==0.8.0
nbconvert==7.8.0
nbformat==5.9.2
nest-asyncio==1.5.6
networkx==3.1
notebook_shim==0.2.3
numpy==1.25.2
oauthlib==3.2.2
overrides==7.4.0
packaging==23.1
pandocfilters==1.5.0
parso==0.8.3
pexpect==4.8.0
pickleshare==0.7.5
Pillow==9.4.0
pip==23.3.1
pkgutil_resolve_name==1.3.10
platformdirs==3.10.0
ply==3.11
prometheus-client==0.17.0
prompt-toolkit==3.0.38
protobuf==3.20.3
psutil==5.9.0
ptyprocess==0.7.0
pure-eval==0.2.2
pyasn1==0.4.8
pyasn1-modules==0.2.8
pycparser==2.21
Pygments==2.15.1
PyJWT==2.7.0
pyOpenSSL==23.2.0
pyparsing==3.0.9
PyQt5-sip==12.11.0
pyrsistent==0.18.0
PySocks==1.7.1
python-dateutil==2.8.2
python-json-logger==2.0.7
python-qt-binding==0.4.4
pytz==2023.3.post1
pyu2f==0.1.5
PyYAML==6.0
pyzmq==25.1.0
qt-dotgraph==0.4.2
qt-gui==0.4.2
qt-gui-cpp==0.4.2
qt-gui-py-common==0.4.2
requests==2.31.0
requests-oauthlib==1.3.1
resource_retriever==1.12.7
rfc3339-validator==0.1.4
rfc3986-validator==0.1.1
rosbag==1.16.0
rosboost-cfg==1.15.8
rosclean==1.15.8
roscreate==1.15.8
rosgraph==1.16.0
roslaunch==1.16.0
roslib==1.15.8
roslint==0.12.0
roslz4==1.16.0
rosmake==1.15.8
rosmaster==1.16.0
rosmsg==1.16.0
rosnode==1.16.0
rosparam==1.16.0
rospy==1.16.0
rosservice==1.16.0
rostest==1.16.0
rostopic==1.16.0
rosunit==1.15.8
roswtf==1.16.0
rqt_action==0.4.9
rqt_bag==0.5.1
rqt_bag_plugins==0.5.1
rqt-console==0.4.12
rqt_dep==0.4.12
rqt_graph==0.4.14
rqt_gui==0.5.3
rqt_gui_py==0.5.3
rqt-image-view==0.4.17
rqt_launch==0.4.9
rqt-logger-level==0.4.12
rqt-moveit==0.5.11
rqt_msg==0.4.10
rqt_nav_view==0.5.7
rqt_plot==0.4.13
rqt_pose_view==0.5.11
rqt_publisher==0.4.10
rqt_py_common==0.5.3
rqt_py_console==0.4.10
rqt-reconfigure==0.5.5
rqt-robot-dashboard==0.5.8
rqt-robot-monitor==0.5.15
rqt_robot_steering==0.5.12
rqt-runtime-monitor==0.5.10
rqt-rviz==0.7.0
rqt_service_caller==0.4.10
rqt_shell==0.4.11
rqt_srv==0.4.9
rqt-tf-tree==0.6.4
rqt_top==0.4.10
rqt_topic==0.4.13
rqt_web==0.4.10
rsa==4.9
rviz==1.14.20
Send2Trash==1.8.2
sensor-msgs==1.13.1
setuptools==68.0.0
sip==6.6.2
six==1.16.0
smach==2.5.2
smach-ros==2.5.2
smclib==1.8.6
sniffio==1.3.0
soupsieve==2.4
stack-data==0.6.2
sympy==1.11.1
tensorboard==2.13.0
tensorboard-data-server==0.7.0
tensorboard-plugin-wit==1.8.1
terminado==0.17.1
tf==1.13.2
tf-conversions==1.13.2
tf2-geometry-msgs==0.7.7
tf2-kdl==0.7.7
tf2-py==0.7.7
tf2-ros==0.7.7
tinycss2==1.2.1
toml==0.10.2
tomli==2.0.1
topic-tools==1.16.0
torch==2.0.1
torchaudio==2.0.2
torchvision==0.15.2a0
tornado==6.3.2
traitlets==5.9.0
triton==2.0.0
typing_extensions==4.7.1
typing-utils==0.1.0
urllib3==1.26.16
wcwidth==0.2.6
webencodings==0.5.1
websocket-client==1.5.2
Werkzeug==2.3.4
wheel==0.40.0
xacro==1.14.16
yarl==1.8.1
zipp==3.15.0



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
