[project]
name = "reconstruct4d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.9.0",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "ruff>=0.6.7",
    "tensorflow>=2.17.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.45.1",
]
