[project]
name = "reconstruct4d"
version = "0.2"
description = "output moving object mask, not moving pix"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.8",
    "flax>=0.9.0",
    "imageio>=2.35.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pyyaml>=6.0.2",
    "ruff>=0.6.7",
    "scipy>=1.14.1",
    "tensorflow>=2.17.0",
    "termcolor>=2.4.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.45.1",
    "yacs>=0.1.8",
]
