[tool.poetry]
name = "reconstruct4d"
version = "0.1.0"
description = ""
authors = ["Masahiro Ogawa <masahiro.ogaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mmcv = "^2.2.0"
mmcv-full = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
